--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
 
         <!-- Security Headers -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'none';">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self';">
         <meta name="referrer" content="strict-origin-when-cross-origin">
         <meta name="permissions-policy" content="geolocation=(), microphone=(), camera=()">
 
