refactor: refine terminal theme with improved visual hierarchy

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#0a0a0a">
         <link rel="stylesheet" href="styles.css">
         <title>Evgeniy Skuridin — Senior Software Engineer | React, TypeScript, AI/LLM | Netherlands</title>
         <meta
@@ -62,37 +63,37 @@
 
             <section id="identity">
                 <p class="prompt">whoami</p>
-                <h1>EVGENIY SKURIDIN</h1>
+                <h1 data-text="Evgeniy Skuridin">Evgeniy Skuridin</h1>
             </section>
-            
+
             <section id="about">
                 <p class="prompt">cat bio.txt</p>
                 <p class="description">
-                    SENIOR SOFTWARE ENGINEER WITH 15+ YEARS OF FULL-STACK DEVELOPMENT EXPERIENCE. CURRENTLY BUILDING SCALABLE APPLICATIONS WITH REACT/TYPESCRIPT, EXPERIENCED IN AI/LLM INTEGRATION, GRAPHQL APIS, AND MODERN WEB ARCHITECTURE. BASED IN THE NETHERLANDS.
+                    Senior Software Engineer with 15+ years of full-stack development experience. Currently building scalable applications with React/TypeScript, experienced in AI/LLM integration, GraphQL APIs, and modern web architecture. Based in the Netherlands.
                 </p>
             </section>
             
             <section id="skills">
                 <p class="prompt">ls --skills</p>
                 <ul class="skills">
-                    <li>REACT.JS</li>
-                    <li>TYPESCRIPT</li>
-                    <li>GRAPHQL</li>
-                    <li>NODE.JS</li>
+                    <li>React.js</li>
+                    <li>TypeScript</li>
+                    <li>GraphQL</li>
+                    <li>Node.js</li>
                 </ul>
             </section>
 
             <section id="contact">
                 <p class="prompt">./open_linkedin.sh</p>
                 <a href="https://www.linkedin.com/in/redfield1990/" class="cta" rel="noopener noreferrer">
-                    CONNECT_TO_LINKEDIN
+                    Connect to LinkedIn
                 </a>
             </section>
 
             <footer class="system-logs">
-                <p>&gt; SYSTEM READY...</p>
-                <p>&gt; ALL MODULES LOADED</p>
-                <p>&gt; STANDBY MODE</p>
+                <p>&gt; System ready...</p>
+                <p>&gt; All modules loaded</p>
+                <p>&gt; Standby mode</p>
             </footer>
         </main>
     </body>
