feat: add GitHub link and highlight LinkedIn as primary CTA
- Add GitHub link to navigation
- Style LinkedIn with accent color and arrow to emphasize as main CTA
- Add accent color CSS variables for light/dark modes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <header>
             <nav>
                 <span class="logo">ES</span>
-                <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer">LinkedIn</a>
+                <div class="nav-links">
+                    <a href="https://github.com/skuridin" rel="noopener noreferrer">GitHub</a>
+                    <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer">LinkedIn →</a>
+                </div>
             </nav>
         </header>
 
