--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
+    <link rel="preload" href="./fonts/space-grotesk-variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="styles.css">
     <title>Evgeniy Skuridin — Senior Software Engineer | React, TypeScript, AI/LLM | Netherlands</title>
     <meta
@@ -26,8 +27,6 @@
     <meta property="og:url" content="https://skurid.in/">
     <meta property="og:title" content="Evgeniy Skuridin — Senior Software Engineer">
     <meta property="og:description" content="Senior Software Engineer with 15+ years of experience building products people actually use. React, TypeScript, LLM integrations, voice & audio processing.">
-    <meta property="og:image" content="https://skurid.in/og-image.jpg">
-
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://skurid.in/">
@@ -60,7 +59,7 @@
                 <span class="logo">ES</span>
                 <div class="nav-links">
                     <a href="https://github.com/skuridin" rel="noopener noreferrer">GitHub</a>
-                    <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer">LinkedIn →</a>
+                    <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer">LinkedIn <span aria-hidden="true">→</span></a>
                 </div>
             </nav>
         </header>
