fix: address expert review issues
- Add 'use strict' and error handling to dots.js
- Wrap canvas init in DOMContentLoaded
- Add defer attribute to script tag
- Add preconnect hints for external domains
- Fix focus-visible styles (keyboard only)
- Update sitemap date to 2026-02-14
- Sync OG and Twitter meta descriptions
- Fix canvas idle race condition

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
     <link rel="preload" href="./fonts/space-grotesk-variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preconnect" href="https://github.com">
+    <link rel="preconnect" href="https://www.linkedin.com">
     <link rel="stylesheet" href="styles.css">
     <title>Evgeniy Skuridin — Senior Software Engineer | React, TypeScript, AI/LLM | Netherlands</title>
     <meta
@@ -31,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://skurid.in/">
     <meta name="twitter:title" content="Evgeniy Skuridin — Senior Software Engineer">
-    <meta name="twitter:description" content="Senior Software Engineer with 15+ years of experience building products people actually use. React, TypeScript, LLM integrations.">
+    <meta name="twitter:description" content="Senior Software Engineer with 15+ years of experience building products people actually use. React, TypeScript, LLM integrations, voice & audio processing.">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -121,6 +123,6 @@
         </footer>
     </div>
 
-    <script src="dots.js"></script>
+    <script src="dots.js" defer></script>
 </body>
 </html>
