--- a/index.html
+++ b/index.html
@@ -8,7 +8,289 @@
     <link rel="preload" href="./fonts/space-grotesk-variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preconnect" href="https://github.com">
     <link rel="preconnect" href="https://www.linkedin.com">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+@font-face {
+    font-family: 'Space Grotesk';
+    src: url('./fonts/space-grotesk-variable.woff2') format('woff2');
+    font-weight: 300 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+:root {
+    --bg: #fafafa;
+    --bg-alt: #f5f5f5;
+    --text: #171717;
+    --text-muted: #525252;
+    --text-subtle: #737373;
+    --border: #e5e5e5;
+    --dot: #d4d4d4;
+    --link: #171717;
+    --link-hover: #525252;
+    --accent: #2563eb;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bg: #0a0a0a;
+        --bg-alt: #171717;
+        --text: #fafafa;
+        --text-muted: #a3a3a3;
+        --text-subtle: #737373;
+        --border: #262626;
+        --dot: #404040;
+        --link: #fafafa;
+        --link-hover: #a3a3a3;
+        --accent: #60a5fa;
+    }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Space Grotesk', -apple-system, sans-serif;
+    background: var(--bg);
+    color: var(--text);
+    min-height: 100vh;
+}
+
+.frame {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--border);
+    margin: 1.5rem;
+}
+
+header {
+    padding: 1.5rem 2rem;
+    border-bottom: 1px solid var(--border);
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+}
+
+.nav-links {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.nav-links a {
+    font-size: 0.75rem;
+    color: var(--text-subtle);
+    text-decoration: none;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    transition: color 0.2s ease;
+}
+
+.nav-links a:hover {
+    color: var(--text);
+}
+
+.nav-links a:focus-visible {
+    color: var(--text);
+    outline: 2px solid var(--accent);
+    outline-offset: 4px;
+}
+
+.nav-links a:last-child {
+    color: var(--accent);
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero {
+    padding: 4rem 2rem;
+    border-bottom: 1px solid var(--border);
+    position: relative;
+    overflow: hidden;
+}
+
+#dots-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.hero > *:not(#dots-canvas) {
+    position: relative;
+    z-index: 1;
+}
+
+.label-group {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.label {
+    font-size: 0.6875rem;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    color: var(--text-subtle);
+}
+
+.divider {
+    width: 3rem;
+    height: 1px;
+    background: var(--border);
+}
+
+h1 {
+    font-size: clamp(3rem, 10vw, 5.5rem);
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -0.03em;
+}
+
+.tagline {
+    margin-top: 2rem;
+    font-size: 1.125rem;
+    font-weight: 400;
+    color: var(--text-muted);
+    letter-spacing: 0.02em;
+}
+
+.info-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    flex: 1;
+}
+
+.info-block {
+    padding: 2.5rem 2rem;
+    border-right: 1px solid var(--border);
+    border-bottom: 1px solid var(--border);
+    position: relative;
+}
+
+.info-block:nth-child(2n) {
+    border-right: none;
+}
+
+.info-block:nth-child(n+3) {
+    border-bottom: none;
+}
+
+.number {
+    font-size: 0.625rem;
+    color: var(--text-subtle);
+    letter-spacing: 0.1em;
+    position: absolute;
+    top: 2.5rem;
+    right: 2rem;
+}
+
+h2 {
+    font-size: 0.6875rem;
+    font-weight: 500;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    color: var(--text-muted);
+    margin-bottom: 1.5rem;
+}
+
+.info-block p {
+    font-size: 0.9375rem;
+    line-height: 1.7;
+    color: var(--text-muted);
+    font-weight: 300;
+}
+
+.info-block p + p {
+    margin-top: 1rem;
+}
+
+.info-block a {
+    color: var(--link);
+    text-decoration: underline;
+    text-underline-offset: 2px;
+    transition: color 0.2s ease;
+}
+
+.info-block a:hover {
+    color: var(--link-hover);
+}
+
+.info-block a:focus-visible {
+    color: var(--link-hover);
+    outline: 2px solid var(--accent);
+    outline-offset: 2px;
+}
+
+.info-block ul {
+    list-style: none;
+    columns: 2;
+    column-gap: 2rem;
+}
+
+.info-block li {
+    font-size: 0.9375rem;
+    line-height: 2;
+    color: var(--text-muted);
+    font-weight: 300;
+}
+
+footer {
+    padding: 1.5rem 2rem;
+    border-top: 1px solid var(--border);
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.6875rem;
+    color: var(--text-subtle);
+    letter-spacing: 0.05em;
+}
+
+@media (max-width: 800px) {
+    .frame {
+        margin: 1rem;
+    }
+
+    .info-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .info-block {
+        border-right: none;
+        border-bottom: 1px solid var(--border);
+    }
+
+    .info-block:nth-child(n+3) {
+        border-bottom: 1px solid var(--border);
+    }
+
+    .info-block:last-child {
+        border-bottom: none;
+    }
+
+    footer {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
+    </style>
     <title>Evgeniy Skuridin — Senior Software Engineer | React, TypeScript, AI/LLM | Netherlands</title>
     <meta
         name="description"
@@ -16,7 +298,7 @@
     />
 
     <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; font-src 'self'; img-src 'self' data:; connect-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; worker-src 'self'; style-src 'self'; font-src 'self'; img-src 'self' data:; connect-src 'self';">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta name="permissions-policy" content="geolocation=(), microphone=(), camera=()">
 
