--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ body {
     background: var(--bg);
     color: var(--text);
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
 .frame {
@@ -117,6 +119,7 @@ main {
     display: flex;
     flex-direction: column;
     min-height: 0;
+}
 
 .hero {
     padding: 4rem 2rem;
