--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@ h2 {
                 </div>
             </section>
         </main>
-
-
+    </div>
 
     <script src="dots.js" defer></script>
 </body>
