--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
     box-sizing: border-box;
 }
 
+.skip-link {
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: var(--bg);
+    color: var(--text);
+    padding: 0.75rem 1.5rem;
+    border: 1px solid var(--border);
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 0.875rem;
+    z-index: 1000;
+    transition: top 0.2s ease;
+}
+
+.skip-link:focus {
+    top: 1rem;
+    outline: 2px solid var(--accent);
+    outline-offset: 2px;
+}
+
 body {
     font-family: 'Space Grotesk', -apple-system, sans-serif;
     background: var(--bg);
@@ -327,18 +349,19 @@ h2 {
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
+    <a href="#main" class="skip-link">Skip to main content</a>
     <div class="frame">
         <header>
             <nav>
                 <span class="logo">ES</span>
                 <div class="nav-links">
-                    <a href="https://github.com/skuridin" rel="noopener noreferrer">GitHub</a>
-                    <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer">LinkedIn <span aria-hidden="true">→</span></a>
+                    <a href="https://github.com/skuridin" rel="noopener noreferrer" aria-label="GitHub (opens in new tab)">GitHub</a>
+                    <a href="https://www.linkedin.com/in/redfield1990/" rel="noopener noreferrer" aria-label="LinkedIn (opens in new tab)">LinkedIn <span aria-hidden="true">→</span></a>
                 </div>
             </nav>
         </header>
 
-        <main>
+        <main id="main" tabindex="-1">
             <section class="hero">
                 <canvas id="dots-canvas" aria-hidden="true"></canvas>
                 <div class="label-group">
